# AIAFTN

./: .gitignore  Cargo.toml  FUZZING.md  Makefile  README.md
docs/: CODE_REVIEW.md  FORMATS_HIERARCHY.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_adexp_parser.rs  fuzz_nmea_parser.rs  fuzz_parser.rs  fuzz_sbs_parser.rs
scripts/: download_sbs_nmea_data.sh  generate_fuzz_corpus.sh
src/: aftn.pest  categories.rs  error.rs  lib.rs  main.rs  message.rs  parser.rs
src/adexp/: adexp.pest  error.rs  fields.rs  message.rs  message_tests.rs  mod.rs  parser.rs  types.rs  validation.rs
src/aftn/: message.rs  message_tests.rs  mod.rs  parser.rs  submessages.rs  validation.rs
src/nmea/: ais.rs  error.rs  gps.rs  message.rs  message_tests.rs  mod.rs  nmea.pest  parser.rs  types.rs  validation.rs
src/sbs/: error.rs  message.rs  message_tests.rs  mod.rs  parser.rs  sbs.pest  types.rs  (+1 more)
tests/: address_length_tests.rs  adexp_actarr_test.rs  adexp_begin_end_tests.rs  adexp_chgdep_test.rs  adexp_compound_fields_tests.rs  adexp_fields_tests.rs  adexp_integration_tests.rs  adexp_reserved_titles_test.rs  adexp_robustness_tests.rs  adexp_specification_example_test.rs  adexp_tests.rs  adexp_type_tests.rs  adexp_validation_tests.rs  aftn_fpl_database_tests.rs  aftn_tests.rs  all_categories_tests.rs  analyze_failures.rs  category_tests.rs  comprehensive_category_tests.rs  integration_tests.rs  large_dataset_tests.rs  mesonet_tests.rs  missing_categories_test.rs  nmea_tests.rs  real_world_tests.rs  robustness_tests.rs  sbs_tests.rs  serialization_tests.rs  submessage_tests.rs
(+160 files in other folders)
